--- a/Editor.Processors/Editor.Processors.csproj
+++ b/Editor.Processors/Editor.Processors.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Editor.Interop\Editor.Interop.csproj" />
+    <ProjectReference Include="..\Editor.Shaders\Editor.Shaders.csproj" />
     <ProjectReference Include="..\Primary.Common\Primary.Common.csproj" />
     <ProjectReference Include="..\Primary.RHI\Primary.RHI.csproj" />
     <ProjectReference Include="..\Primary\Primary.csproj" />
