--- a/ShaderGen/Properties/launchSettings.json
+++ b/ShaderGen/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ShaderGen": {
       "commandName": "Project",
-      "commandLineArgs": "-i D:\\source\\repos\\Constructor\\Source\\DemoGame1\\Content\\Demo.hlsl -o abc -I D:\\source\\repos\\Constructor\\Source"
+      "commandLineArgs": "-i D:\\source\\repos\\Constructor\\Source\\DemoGame1\\Content\\Demo.hlsl -o abc -I D:\\source\\repos\\Constructor\\Source --d3d12"
     }
   }
 }
