--- a/ShaderGen/ShaderGen.csproj
+++ b/ShaderGen/ShaderGen.csproj
@@ -14,5 +14,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Editor.Shaders\Editor.Shaders.csproj" />
+    <ProjectReference Include="..\Primary.Common\Primary.Common.csproj" />
   </ItemGroup>
 </Project>
